<resources>
    <string name="app_name">Reminder</string>
    <string name="text_newReminder">New Reminder</string>
    <string name="text_newList">New List</string>
    <string name="text_addList">Add List</string>
    <string name="text_search">Search</string>
    <string name="text_today">Today</string>
    <string name="text_timed">Timed</string>
    <string name="text_allOf">All Of</string>
    <string name="text_flagged">Flagged</string>
    <string name="text_title">Title</string>
    <string name="text_notes">Notes</string>
    <string name="text_add">Add</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_list">List</string>
    <string name="text_date">Date</string>
    <string name="text_clock">Clock</string>
    <string name="text_location">Location</string>
    <string name="text_addFlag">Add Flag</string>
    <string name="text_comingSoon">Coming Soon</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_finishRepeating">Finish Repeating</string>
    <string name="text_whileTexting">While Texting</string>
    <string name="text_whileTextingExplanation">When this option is activated, a reminder notification will be shown while messaging with the person you selected.</string>
    <string name="text_priority">Priority</string>
    <string name="text_lists">Lists</string>
    <string name="text_addImage">Add Image</string>
    <string name="text_URL">URL</string>
    <string name="text_flag">Flag</string>
    <string name="text_message">Message</string>
    <string name="text_locationExplanation">When this option is activated, a reminder notification will appear when you go to the location you selected.</string>
    <string name="text_never">Never</string>
    <string name="text_everyHour">Every Hour</string>
    <string name="text_everyDay">Every Day</string>
    <string name="text_everyWeek">Every Week</string>
    <string name="text_every2Weeks">Every 2 Weeks</string>
    <string name="text_monthly">Monthly</string>
    <string name="text_every3Months">Every 3 Months</string>
    <string name="text_every6Months">Every 6 Months</string>
    <string name="text_everyYear">Every Year</string>
    <string name="text_select">Select</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_repeatEndlessly">Repeat Endlessly</string>
    <string name="text_lastRecurrenceDay">Last Recurrence Date</string>
    <string name="text_reminders">Reminders</string>
    <string name="text_none">None</string>
    <string name="text_low">Low</string>
    <string name="text_medium">Medium</string>
    <string name="text_high">High</string>
    <string name="alert_cancelNewReminder">Exit without saving changes</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_changeListName">Change List Name</string>
    <string name="text_shareList">Share List</string>
    <string name="text_deleteList">Delete List</string>
    <string name="alert_deleteReminderList">Delete</string>
    <string name="text_delete">Delete</string>
    <string name="alert_deleteReminderListMessage">All reminders in this list are also deleted.</string>
    <string name="text_newListName">New List Name</string>
    <string name="text_change">Change</string>
    <string name="text_edit_details">Edit/Details</string>
    <string name="text_update">Update</string>
    <string name="text_details">Details</string>
    <string name="text_login">Sign In</string>
    <string name="text_or">or</string>
    <string name="text_signInWithGoogle">Sign In with Google</string>
    <string name="text_password">Password</string>
    <string name="text_continueWithoutSignIn">Continue Without Sign In</string>
    <string name="text_signUpWithGoogle">Sign Up with Google</string>
    <string name="text_signUp">Sign Up</string>
    <string name="text_dontHaveAnAccount">Don\'t have an account ?</string>
    <string name="text_confirmPassword">Confirm Password</string>
    <string name="alert_emailEmpty">Please enter your email address.</string>
    <string name="alert_passwordEmpty">Please enter your password.</string>
    <string name="alert_passwordDontMatch">Your passwords do not match. Please try again.</string>
    <string name="alert_passwordShort">Your password cannot be less than 8 characters. Please try again.</string>
    <string name="alert_internetInactive">Your internet connection is not active, please turn on your internet and try again.</string>
    <string name="alert_emailFormatWrong">Please enter your email address in the correct format.</string>
    <string name="alert_registerFailed">Registration failed, please try again later.</string>
    <string name="alert_loginUnsuccesful">Something went wrong. Check your Email and Password or if you are not registered, please register.</string>
    <string name="text_firstName">First Name</string>
    <string name="text_lastName">Last Name</string>
    <string name="alert_firstLastNameEmpty">Name and surname cannot be left blank.</string>
    <string name="alert_verifyEmail">Please verify your account from the confirmation email sent to your e-mail address.</string>
    <string name="alert_continueWithoutLogin">Do you want to continue without logging in?</string>
    <string name="alert_continueWithLoginExp">If you continue without logging in, your reminders will not be saved and all of them will be deleted when you delete the app.</string>
    <string name="text_forgotPassword">Forgot Pasword ?</string>
</resources>