<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_200"
        tools:context=".NewReminderActivity">

        <ImageView
            android:id="@+id/reminder_list_icon_ImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="36dp"
            android:contentDescription="reminder_list_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_reminder_list_TextView"
            app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24_blue_900" />

        <TextView
            android:id="@+id/new_reminder_list_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/text_newList"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/add_new_reminder_list_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/text_add"
            android:textAllCaps="false"
            android:textColor="@color/light_blue_A700"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back_to_main_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            android:textColor="@color/light_blue_A700"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_reminder_list_name_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint=""
            android:inputType="textCapSentences|textMultiLine"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/color_blue_900"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_list_icon_ImageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
