<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/today_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/timed_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/today_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_today"
            android:textColor="@color/grey_600"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_icon" />

        <TextView
            android:id="@+id/today_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_baseline_calendar_today_light_blue24"
            android:gravity="center"
            android:textColor="@color/light_blue_900"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/today_count"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:gravity="right"
            android:text="11111"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/today_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timed_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/today_constraint"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/timed_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_baseline_timer_24"
            android:gravity="center"
            android:textColor="@color/light_blue_300"
            android:textSize="7sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timed_count"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:gravity="right"
            android:text="11"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timed_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timed_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_timed"
            android:textColor="@color/grey_600"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timed_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/all_of_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/today_constraint"
        app:layout_constraintStart_toStartOf="@+id/today_constraint"
        app:layout_constraintTop_toBottomOf="@+id/today_constraint">

        <TextView
            android:id="@+id/all_of_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_baseline_inbox_24"
            android:gravity="center"
            android:textColor="@color/light_blue_300"
            android:textSize="7sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/all_of_count"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:gravity="right"
            android:text="11"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/all_of_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/all_of_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:text="@string/text_allOf"
            android:textColor="@color/grey_600"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_of_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flagged_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/timed_constraint"
        app:layout_constraintStart_toStartOf="@id/timed_constraint"
        app:layout_constraintTop_toBottomOf="@+id/timed_constraint">

        <TextView
            android:id="@+id/flagged_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_baseline_flag_24"
            android:gravity="center"
            android:textColor="@color/light_blue_300"
            android:textSize="7sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/flagged_count"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:gravity="right"
            android:text="11"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flagged_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/flagged_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_flagged"
            android:textColor="@color/grey_600"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flagged_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>